[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/fonts/STXINWEI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://art/temp/PauseWindow/DropItemWindow.png" type="Texture" id=2]
[ext_resource path="res://global/PauseWindow/BackPack/DropItemWindow.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="DropItemWindow" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = -180.0
margin_top = -30.0
margin_right = 180.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "1"
max_length = 6
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKbutton" type="Button" parent="."]
margin_left = -180.0
margin_top = 40.0
margin_right = -30.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
text = "确定"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 30.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
text = "取消"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="OKbutton" to="." method="_on_OKbutton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
